[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scenes/ui/MainGUI/MainGUI.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/UI/arrow.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/ui/MainGUI/TechTree/TechTree.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Sprites/UI/eye.png" type="Texture" id=4]
[ext_resource path="res://src/scenes/ui/ResourceMenu/ResourceMenu.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 168, 540 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 15

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.145098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.145098 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="Animation" id=5]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( -300, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Indicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Indicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TriggerArea:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 97.7283, 541.623 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visual/Menus:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 492, 64 ), Vector2( 320, 64 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Visual:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -300, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Indicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Indicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TriggerArea:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -147.736, 540.306 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Visual/Menus:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 320, 64 ), Vector2( 492, 64 ) ]
}

[node name="MainGUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -776.0
margin_top = -304.0
margin_right = 9224.0
margin_bottom = 9696.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriggerArea" type="CollisionShape2D" parent="."]
position = Vector2( -147.736, 540.306 )
shape = SubResource( 1 )

[node name="Visual" type="Node2D" parent="."]
position = Vector2( -300, 0 )
z_index = 4096

[node name="Background" type="Panel" parent="Visual"]
modulate = Color( 0.160784, 0.219608, 0.498039, 1 )
margin_left = -15.0
margin_right = 265.0
margin_bottom = 1080.0
mouse_filter = 1
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Indicator" type="Sprite" parent="Visual"]
position = Vector2( 332.693, 540 )
rotation = 0.785398
scale = Vector2( 0.025, 0.025 )
texture = ExtResource( 2 )

[node name="ResourceList" type="Node2D" parent="Visual"]
position = Vector2( 20, 48 )

[node name="Background" type="Panel" parent="Visual/ResourceList"]
margin_right = 224.0
margin_bottom = 384.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Visual/ResourceList"]
margin_right = 224.0
margin_bottom = 56.0
bbcode_enabled = true
bbcode_text = "[center]
Resources[/center]"
text = "
Resources"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Visual/ResourceList"]
margin_left = 16.0
margin_top = 72.0
margin_right = 208.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="RichTextLabel" parent="Visual/ResourceList"]
margin_top = 344.0
margin_right = 249.0
margin_bottom = 385.0
rect_scale = Vector2( 0.9, 0.9 )
bbcode_enabled = true
bbcode_text = "[center]Storage cap: 0[/center]"
text = "Storage cap: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DevelopingTechnologies" type="Node2D" parent="Visual"]
position = Vector2( 20, 496 )

[node name="Background" type="Panel" parent="Visual/DevelopingTechnologies"]
margin_right = 224.0
margin_bottom = 224.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Visual/DevelopingTechnologies"]
margin_top = -12.0
margin_right = 224.0
margin_bottom = 68.0
bbcode_enabled = true
bbcode_text = "[center]
Technology in
 development[/center]"
text = "
Technology in
 development"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Visual/DevelopingTechnologies"]
margin_left = 16.0
margin_top = 72.0
margin_right = 208.0
margin_bottom = 208.0
grow_horizontal = 2
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Visual/DevelopingTechnologies/ScrollContainer"]
margin_right = 192.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Buttons" type="Node2D" parent="Visual"]

[node name="TechTree" type="Button" parent="Visual/Buttons"]
margin_left = 20.0
margin_top = 944.0
margin_right = 244.0
margin_bottom = 1016.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Research & Development"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeView" type="TextureButton" parent="Visual/Buttons"]
visible = false
modulate = Color( 1, 1, 1, 0.494118 )
margin_left = 188.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 68.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menus" type="Control" parent="Visual"]
margin_left = 492.0
margin_top = 64.0
margin_right = 492.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TechTree" parent="Visual/Menus" instance=ExtResource( 3 )]
visible = false
margin_right = -40.0
margin_bottom = -40.0

[node name="ResourceMenu" parent="Visual/Menus" instance=ExtResource( 5 )]
visible = false
margin_right = -40.0
margin_bottom = -40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SlideIn = SubResource( 5 )
anims/SlideOut = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 960, 540 )
zoom = Vector2( 2, 2 )

[node name="Tween" type="Tween" parent="."]
